# gcloud-resources-list

./: .gitignore  README.md  build_config.py  config.yaml  config_template.yaml  functions.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
output/: cloud_bigquery_datapolicies.csv  cloud_bigquery_datasets.csv  cloud_dataform.csv  cloud_functions.csv  cloud_kms_keys.csv  cloud_run_services.csv  cloud_scheduler.csv  cloud_workflows.csv  service_accounts.csv
src/gcp_inventory/: __init__.py  auth.py  cli.py  client_cache.py  config.py  folder_config.py  inventory.py  registry.py  runner.py  service_accounts.py  writer.py
src/gcp_inventory/collectors/: __init__.py  bigquery.py  cloud_functions.py  cloud_run.py  compute.py  dataform.py  iam.py  kms.py  scheduler.py  storage.py  workflows.py
src/gcp_inventory/sa/: __init__.py  roles.py
tests/: test_cli.py  test_client_cache.py  test_collectors_clients.py  test_collectors_iam.py  test_config.py  test_folder_config.py  test_harness.py  test_inventory.py  test_sa.py
